--- a/configs/augmentation/basic_augs.yaml
+++ b/configs/augmentation/basic_augs.yaml
@@ -1,24 +1,37 @@
 # @package _group_
 train:
   augs:
-    - class_name: albumentations.Flip
+    - class_name: albumentations.HorizontalFlip
       params:
-        p: 0.5
+        p: 0.6
+    - class_name: albumentations.Cutout
+      params:
+        num_holes: 3
+        max_h_size: 16
+        max_w_size: 40
+        fill_value: 0
+        p: 1.0
     - class_name: albumentations.ShiftScaleRotate
       params:
         shift_limit: 0.0625
         scale_limit: 0.1
-        rotate_limit: 15
+        rotate_limit: 10
     - class_name: albumentations.Resize
       params:
-        height: 128
-        width: 128
-    - class_name: albumentations.Normalize
+        height: 256
+        width: 256
+    - class_name: albumentations.RGBShift
       params:
-        p: 1.0
-    - class_name: albumentations.pytorch.transforms.ToTensorV2
+        p: 0.5
+    - class_name: albumentations.HueSaturationValue
       params:
-        p: 1.0
+        p: 0.5
+#    - class_name: albumentations.Normalize
+#      params:
+#        p: 1.0
+#    - class_name: albumentations.pytorch.transforms.ToTensorV2
+#      params:
+#        p: 1.0
 valid:
   augs:
   - class_name: albumentations.Resize
